# create

./: .gitignore  CMakeLists.txt  README.md  clean.sh  configure  create_config.h  uncrustify.cfg
brain/: CMakeLists.txt  testSetup.sh
brain/src/: config.h  controller_main.cc  create.cpp  create.h  create_config.h.in  create_main.cc  create_test.cc  irobot-create-fwd.h  irobot-create.cc  irobot-create.h  irobot_create.cc  irobot_create.h  irobot_create_open_interface.cc  irobot_create_open_interface.cpp  irobot_create_open_interface.h  irobot_create_test.cc  virtual_irobot_create.cc  virtual_irobot_create.cpp  virtual_irobot_create.h
brain/src/tools/: collection_utils.h  make_unique.h  status.cc  status.h  using_std_stuff.h
skeleton/: CMakeLists.txt
skeleton/src/: create.cpp  create.cxx  create_config.h.in  create_test.cc
src/: create.cxx
